--- a/biome.json
+++ b/biome.json
@@ -35,6 +35,11 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "ignore": [".vscode/**/*", "node_modules/**/*", "dist/**/*"]
+    "ignore": [
+      ".vscode/**/*",
+      "node_modules/**/*",
+      "dist/**/*",
+      "storybook-static/**/*"
+    ]
   }
 }
