--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,16 @@
+# Local
 .DS_Store
-
-.pnp
-.pnp.js
-.env.local
-.env.*.local
-.history
+*.local
 *.log*
 
-node_modules/
-.yarn-integrity
-.pnpm-store/
-*.tsbuildinfo
-.changeset/pre.json
-
+# Dist
+node_modules
+storybook-static
 dist/
-coverage/
-release/
-output/
-output_resource/
-log/
 
-.vscode/**/*
-!.vscode/settings.json
+# IDE
+.vscode/*
 !.vscode/extensions.json
-.idea/
+.idea
 
-**/*/typings/auto-generated
-
-modern.config.local.*
+*storybook.log
