--- a/components.json
+++ b/components.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "new-york",
-  "rsc": true,
+  "rsc": false,
   "tsx": true,
   "tailwind": {
     "config": "",
@@ -14,7 +14,7 @@
     "components": "@/components",
     "utils": "@/libs/utils",
     "ui": "@/components/ui",
-    "libs": "@/libs",
+    "lib": "@/libs",
     "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
