--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "foundation.edosulai.github.io",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "build-storybook": "storybook build --output-dir ./dist/static/storybook",
+    "build": "npm run build-storybook && rsbuild build",
+    "dev": "rsbuild dev --open",
+    "preview": "rsbuild preview",
     "storybook": "storybook dev -p 6006",
-    "reset": "npx rimraf node_modules ./**/node_modules",
-    "dev": "modern dev",
-    "build": "modern build && npm run build-storybook",
-    "start": "modern start",
-    "serve": "modern serve",
-    "new": "modern new",
+    "build-storybook": "storybook build",
     "lint": "biome check",
     "format": "biome format --write",
     "prepare": "simple-git-hooks",
-    "upgrade": "modern upgrade"
+    "commit": "npm run format && git add . && git commit",
+    "reset": "npx rimraf node_modules ./**/node_modules"
   },
-  "engines": {
-    "node": ">=16.18.1"
+  "dependencies": {
+    "@radix-ui/react-toggle": "^1.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.488.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5"
   },
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
@@ -26,67 +33,31 @@
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
   },
-  "dependencies": {
-    "@modern-js/runtime": "2.66.0",
-    "@module-federation/modern-js": "^0.11.3",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.486.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5"
-  },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@modern-js/app-tools": "2.66.0",
-    "@modern-js/plugin-server": "2.66.0",
-    "@modern-js/tsconfig": "2.66.0",
-    "@rsbuild/core": "^1.3.4",
-    "@rsbuild/plugin-node-polyfill": "^1.3.0",
-    "@storybook/addon-a11y": "^8.6.12",
-    "@storybook/addon-backgrounds": "^8.6.12",
-    "@storybook/addon-console": "^3.0.0",
-    "@storybook/addon-designs": "^8.2.1",
-    "@storybook/addon-docs": "^8.6.12",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-graphql": "^6.2.9",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-jest": "^8.6.12",
-    "@storybook/addon-knobs": "^8.0.1",
-    "@storybook/addon-links": "^8.6.12",
-    "@storybook/addon-measure": "^8.6.12",
-    "@storybook/addon-outline": "^8.6.12",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-queryparams": "^7.0.1",
-    "@storybook/addon-storyshots": "^7.6.17",
-    "@storybook/addon-storysource": "^8.6.12",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/addon-svelte-csf": "^4.2.0",
-    "@storybook/addon-themes": "^8.6.12",
-    "@storybook/addon-toolbars": "^8.6.12",
-    "@storybook/addon-viewport": "^8.6.12",
-    "@storybook/channels": "^8.6.12",
-    "@storybook/manager-api": "^8.6.12",
-    "@storybook/preview-api": "^8.6.12",
-    "@storybook/test": "^8.6.12",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/bun": "^1.2.8",
-    "@types/jest": "~29.2.4",
-    "@types/node": "~18.11.9",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "~18.3.1",
-    "@types/react-helmet": "^6.1.11",
-    "lint-staged": "~15.4.0",
+    "@biomejs/biome": "^1.9.4",
+    "@module-federation/rsbuild-plugin": "^0.12.0",
+    "@rsbuild/core": "^1.3.8",
+    "@rsbuild/plugin-react": "^1.2.0",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-interactions": "8.6.12",
+    "@storybook/addon-onboarding": "8.6.12",
+    "@storybook/addon-webpack5-compiler-swc": "3.0.0",
+    "@storybook/blocks": "8.6.12",
+    "@storybook/react": "8.6.12",
+    "@storybook/react-webpack5": "8.6.12",
+    "@storybook/test": "8.6.12",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/fs-extra": "^11.0.4",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "fs-extra": "^11.1.1",
+    "lint-staged": "^15.5.1",
+    "postcss": "^8.5.3",
     "rimraf": "^6.0.1",
-    "simple-git-hooks": "^2.11.1",
-    "storybook": "^8.6.12",
+    "simple-git-hooks": "^2.12.1",
+    "storybook": "8.6.12",
     "storybook-react-rsbuild": "^1.0.1",
-    "tailwindcss": "^4.1.3",
-    "ts-node": "~10.8.1",
-    "tsconfig-paths": "~3.14.1",
-    "typescript": "^5.8.3"
-  },
-  "private": true
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.2"
+  }
 }
