fix: update deploy workflow to use new output directory and adjust build-storybook script

--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "foundation.edosulai.github.io",
   "version": "0.1.0",
   "scripts": {
-    "build-storybook": "storybook build --output-dir ./dist/static/storybook",
+    "build-storybook": "storybook build",
     "storybook": "storybook dev -p 6006",
     "reset": "npx rimraf node_modules ./**/node_modules",
     "dev": "modern dev",
-    "build": "modern build && npm run build-storybook",
+    "build": "modern build && npm run build-storybook --output-dir ./dist/static/storybook",
+    "deploy": "modern deploy && npm run build-storybook --output-dir ./.output/static/storybook",
     "start": "modern start",
     "serve": "modern serve",
     "new": "modern new",
     "lint": "biome check",
     "format": "biome format --write",
     "prepare": "simple-git-hooks",
-    "upgrade": "modern upgrade"
+    "upgrade": "modern upgrade",
+    "commit": "npm run format && git add . && git commit"
   },
   "engines": {
     "node": ">=16.18.1"
