--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,24 +40,15 @@ jobs:
         id: setup_pages
         uses: actions/configure-pages@v5
 
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            dist/
-          key: ${{ runner.os }}-modernjs-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-modernjs-
-
-      - name: Build with Modern.js
-        run: bun run build
+      - name: Deploy Modern.js
+        run: bun run deploy
         env:
           PAGES_BASE_PATH: ${{ steps.setup_pages.outputs.base_path }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./.output
 
   deploy:
     environment:
