--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foundation.edosulai.github.io",
+  "name": "foundation-edosulai",
   "version": "1.0.0",
   "private": true,
   "type": "module",
